@@ -34,7 +34,6 @@ import uk.gov.hmcts.reform.idam.client.models.UserInfo;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import static java.time.LocalDate.now;
 import static org.assertj.core.api.Assertions.assertThat;
@@ -217,7 +216,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                 .fromDate(LocalDate.of(2020, 5, 2))
                 .toDate(LocalDate.of(2020, 6, 2))
                 .build()
-        ).collect(Collectors.toList());
+        ).toList();
 
         List<UnavailableDate> expectedNewDatesFromUnavailableDatesEvent = Stream.of(
             UnavailableDate.builder()
@@ -233,7 +232,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                 .dateAdded(issueDate)
                 .eventAdded(ADD_UNAVAILABLE_DATES_EVENT)
                 .build()
-        ).collect(Collectors.toList());
+        ).toList();
 
         @BeforeEach
         void setup() {
@@ -294,7 +293,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                             .unavailableDateType(UnavailableDateType.SINGLE_DATE)
                             .date(LocalDate.of(2022, 5, 2))
                             .build()
-                    ).map(ElementUtils::element).collect(Collectors.toList());
+                    ).map(ElementUtils::element).toList();
 
                     List<UnavailableDate> expectedDates = Stream.of(
                         UnavailableDate.builder()
@@ -316,7 +315,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                             .dateAdded(issueDate)
                             .eventAdded(ADD_UNAVAILABLE_DATES_EVENT)
                             .build()
-                    ).collect(Collectors.toList());
+                    ).toList();
 
                     CaseData caseData = CaseDataBuilder.builder()
                         .atStateClaimantFullDefence()
@@ -351,7 +350,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                             .unavailableDateType(UnavailableDateType.SINGLE_DATE)
                             .date(LocalDate.of(2022, 5, 2))
                             .build()
-                    ).map(ElementUtils::element).collect(Collectors.toList());
+                    ).map(ElementUtils::element).toList();
 
                     List<UnavailableDate> expectedDates = Stream.of(
                         UnavailableDate.builder()
@@ -373,7 +372,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                             .dateAdded(issueDate)
                             .eventAdded(ADD_UNAVAILABLE_DATES_EVENT)
                             .build()
-                    ).collect(Collectors.toList());
+                    ).toList();
 
                     CaseData caseData = CaseDataBuilder.builder()
                         .atStateClaimantFullDefence()
@@ -413,7 +412,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                             .fromDate(LocalDate.of(2023, 8, 20))
                             .toDate(LocalDate.of(2023, 8, 22))
                             .build()
-                    ).map(ElementUtils::element).collect(Collectors.toList());
+                    ).map(ElementUtils::element).toList();
 
                     List<UnavailableDate> expectedDates = Stream.of(
                         UnavailableDate.builder()
@@ -442,7 +441,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                             .dateAdded(issueDate)
                             .eventAdded(ADD_UNAVAILABLE_DATES_EVENT)
                             .build()
-                    ).collect(Collectors.toList());
+                    ).toList();
 
                     CaseData caseData = CaseDataBuilder.builder()
                         .atStateClaimDetailsNotified()
@@ -480,7 +479,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                             .dateAdded(issueDate)
                             .eventAdded(ADD_UNAVAILABLE_DATES_EVENT)
                             .build()
-                    ).map(ElementUtils::element).collect(Collectors.toList());
+                    ).map(ElementUtils::element).toList();
 
                     List<UnavailableDate> expectedDates = Stream.of(
                         UnavailableDate.builder()
@@ -508,7 +507,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                             .dateAdded(issueDate)
                             .eventAdded(ADD_UNAVAILABLE_DATES_EVENT)
                             .build()
-                    ).collect(Collectors.toList());
+                    ).toList();
 
                     CaseData caseData = CaseDataBuilder.builder()
                         .atStateClaimantFullDefence()
@@ -652,7 +651,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                             .unavailableDateType(UnavailableDateType.SINGLE_DATE)
                             .date(LocalDate.of(2022, 5, 2))
                             .build()
-                    ).map(ElementUtils::element).collect(Collectors.toList());
+                    ).map(ElementUtils::element).toList();
 
                     List<UnavailableDate> expectedDates = Stream.of(
                         UnavailableDate.builder()
@@ -674,7 +673,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                             .dateAdded(issueDate)
                             .eventAdded(ADD_UNAVAILABLE_DATES_EVENT)
                             .build()
-                    ).collect(Collectors.toList());
+                    ).toList();
 
                     CaseData caseData = CaseDataBuilder.builder()
                         .atStateClaimantFullDefence()
@@ -754,7 +753,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                             .unavailableDateType(UnavailableDateType.SINGLE_DATE)
                             .date(LocalDate.of(2022, 5, 2))
                             .build()
-                    ).map(ElementUtils::element).collect(Collectors.toList());
+                    ).map(ElementUtils::element).toList();
 
                     List<UnavailableDate> expectedDates = Stream.of(
                         UnavailableDate.builder()
@@ -776,7 +775,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                             .dateAdded(issueDate)
                             .eventAdded(ADD_UNAVAILABLE_DATES_EVENT)
                             .build()
-                    ).collect(Collectors.toList());
+                    ).toList();
 
                     CaseData caseData = CaseDataBuilder.builder()
                         .atStateClaimantFullDefence()
@@ -824,7 +823,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                             .fromDate(LocalDate.of(2023, 8, 20))
                             .toDate(LocalDate.of(2023, 8, 22))
                             .build()
-                    ).map(ElementUtils::element).collect(Collectors.toList());
+                    ).map(ElementUtils::element).toList();
 
                     List<UnavailableDate> expectedDates = Stream.of(
                         UnavailableDate.builder()
@@ -853,7 +852,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                             .dateAdded(issueDate)
                             .eventAdded(ADD_UNAVAILABLE_DATES_EVENT)
                             .build()
-                    ).collect(Collectors.toList());
+                    ).toList();
 
                     CaseData caseData = CaseDataBuilder.builder()
                         .atStateClaimDetailsNotified()
