@@ -27,7 +27,6 @@ import uk.gov.hmcts.reform.hmc.service.HearingsService;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNull;
@@ -486,8 +485,7 @@ class UpdateNextHearingDetailsCallbackHandlerTest extends BaseCallbackHandlerTes
             .hearingId(Long.valueOf(hearingId))
             .hearingRequestDateTime(hearingRequestTime)
             .hearingDaySchedule(startTimes.stream().map(startTime -> HearingDaySchedule.builder().hearingStartDateTime(
-                startTime).build()).collect(
-                Collectors.toList()))
+                startTime).build()).toList())
             .build();
     }
 
